--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,4 +4,8 @@
   "mixins",
   "blocks/packages",
   "blocks/card",
-  "blocks/button";
+  "blocks/button",
+  "blocks/modal",
+  "blocks/input",
+  "blocks/error",
+  "blocks/success";
