--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,5 +1,5 @@
 $width__mobile: 320px;
-$width__tablet: 768px;
+$width__tablet: 767px;
 $width__notebook: 1280px;
 $width__desktop: 1440px;
 
@@ -9,9 +9,15 @@ $colorBgDarker: #eee;
 $colorBgHighlight1: #1dca69;
 $colorBgHighlight2: #7200de;
 $colorBgHighlight3: #1a1919;
+$colorBgModal: #e9e9e9;
 
 // fonts
 $colorFontLightest: #fff;
 $colorFontMain: #1a1919;
+$colorFontAux: #585858;
 $colorFontLabel: #00054B;
 $colorFontHighlight1: #1dca69;
+$colorFontMark: #d36c6c;
+
+// misc
+$transitionDuration: 0.3s;
