--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -75,7 +75,7 @@
     flex-direction: column;
     align-items: flex-start;
     margin: 0;
-    padding: 0;
+    padding: 0 0 8rem 0;
   }
 
   &__key {
@@ -103,7 +103,7 @@
 
   &__controls {
     position: relative;
-    margin-top: -7.1rem;
+    margin-top: -10rem;
     padding: 7.1rem 0 0 0;
 
     &--green {
