--- a/source/sass/blocks/packages.scss
+++ b/source/sass/blocks/packages.scss
@@ -1,6 +1,6 @@
 .packages {
   padding-top: 9.7rem;
-  padding-bottom: 8.5rem;
+  padding-bottom: 3rem;
 
   &__heading {
     @include h2($colorFontMain);
@@ -17,5 +17,20 @@
     margin: 5.7rem 0 0 0;
     padding: 0;
     list-style: none;
+  }
+}
+
+@media (max-width: $width__tablet) {
+  .packages {
+    &__list {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    &__item {
+      &:not(:first-of-type) {
+        margin-top: 3rem;
+      }
+    }
   }
 }
