--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -14,8 +14,8 @@
   font-display: swap;
   font-style: normal;
   src:
-    url("../fonts/FuturaPT-Bold.woff2") format("woff2"),
-    url("../fonts/FuturaPT-Bold.woff") format("woff");
+    url("../fonts/FuturaPT-Book.woff2") format("woff2"),
+    url("../fonts/FuturaPT-Book.woff") format("woff");
 }
 
 @font-face {
